﻿drkns 16.08.2014 15:16:54 +0200 - build 4049

1. 0002766: не работает поиск, если в имени папки встречается запятая.

drkns 16.08.2014 15:00:36 +0200 - build 4048

1. С форума: плагин по F4 экспортирует файл по GetFiles, а после сохранения и выхода из редактора обратно файл не импортируется.

drkns 16.08.2014 14:49:31 +0200 - build 4047

1. 0002768: Быстрый просмотр – не та область плагинов

drkns 16.08.2014 01:21:40 +0200 - build 4046

1. Рефакторинг.

zg 12.08.2014 01:30:09 +0200 - build 4045

1. с форума: MCTL_GETAREA в горизонтальном меню теперь возвращает MACROAREA_OTHER (вместо MACROAREA_MAINMENU).

2. рефакторинг.

drkns 11.08.2014 23:51:38 +0200 - build 4044

1. В режиме /e и /v плагины получали управление ещё до полной инициализации менеджера.

drkns 11.08.2014 20:24:09 +0200 - build 4043

1. Продолжение 4039.

drkns 10.08.2014 19:54:12 +0200 - build 4042

1. Продолжение 4040.

drkns 10.08.2014 11:18:55 +0200 - build 4041

1. Продолжение 4039 и 4040.

drkns 10.08.2014 00:47:12 +0200 - build 4040

1. Рефакторинг.

drkns 09.08.2014 17:31:49 +0200 - build 4039

1. Продолжаем трясти оконную систему.
   Теперь то, что видно под панелями (userscreen) - это отдельное окно.

2. Рефакторинг.

drkns 06.08.2014 18:59:06 +0200 - build 4038

1. Уточнение 4036.

drkns 06.08.2014 09:01:30 +0200 - build 4037

1. С форума: В 4036 с экрана пропали комманды, запускаемые из ком. строки

drkns 05.08.2014 22:59:59 +0200 - build 4036

1. Рефакторинг.

drkns 04.08.2014 19:57:16 +0200 - build 4035

1. Более тщательная обработка ошибок при запуске вспомогательного процесса в Elevation.

2. Если диалог атрибутов вызван для буквы диска, покажем имя соответствующего тома.

drkns 02.08.2014 14:47:23 +0200 - build 4034

1. В диалоге атрибутов не всегда отображалась информация для DFS-ресурсов.

drkns 01.08.2014 21:36:24 +0200 - build 4033

1. 0002445: Копирование зашифрованных (EFS) файлов

drkns 31.07.2014 22:45:46 +0200 - build 4032

1. Cppcheck warnings.
