@@ -1,4 +1,8 @@
-﻿drkns 16.08.2014 15:16:54 +0200 - build 4049
+﻿drkns 16.08.2014 15:25:55 +0200 - build 4050
+
+1. 0002765: В панелях "functional key bar" скрыт, но по нажатию Ctrl-Alt-Shift проявляется.
+
+drkns 16.08.2014 15:16:54 +0200 - build 4049
 
 1. 0002766: не работает поиск, если в имени папки встречается запятая.
 
